--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <title>Portal de Notícias</title>
 </head>
 <body>
-  <h1>TESTE</h1>
-  <h2>subteste</h2>
-  <a href="#">Link</a>
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+      <div>
+        <img src="assets/Icons/List.svg" alt="ícone de menu">
+        <strong>Menu</strong>
+      </div>
+      <div>
+        <img src="assets/Icons/Logo.svg" alt="Technews logo">
+      </div>
+      <div>
+        <strong>Buscar</strong>
+        <img src="assets/Icons/MagnifyingGlass.svg" alt="ícone de lupa">
+      </div>
+    </nav>
+    <nav id="secundary" class="grid grid-flow-col">
+      <a href="#">Inteligência Artificial</a>
+      <a href="#">Blockchain</a>
+      <a href="#">Hologramas</a>
+      <a href="#">Internet</a>
+      <a href="#">Vestíveis</a>
+      <a href="#">Realidade Aumentada</a>
+      <a href="#">Realidade Virtual</a>
+    
+    </nav>
+  </header>
 </body>
 </html>
