--- a/index.html
+++ b/index.html
@@ -37,5 +37,30 @@
     
     </nav>
   </header>
+  <main class="grid container">
+ <ectiosn id="featured" class="grid grid-flow-col gap-16">
+  <div>
+    <img src="assets/Image/Image 01.png" alt="">
+  </div>
+
+  <div class="grid grid-cols-2 gap-16">
+    <div>
+      <img src="assets/Image/Image 02.png" alt="">
+    </div>
+    <div>
+      <img src="assets/Image/Image 03.png" alt="">
+    </div>
+    <div>
+      <img src="assets/Image/Image 04.png" alt="">
+    </div>
+    <div>
+      <img src="assets/Image/Image 05.png" alt="">
+    </div>
+  </div>
+
+ </section>
+    
+  
+  </main>
 </body>
 </html>
