--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </nav>
   </header>
   <main class="grid container">
- <ectiosn id="featured" class="grid grid-flow-col gap-16">
-  <div>
+ <section id="featured" class="grid grid-flow-col gap-16">
+  <div class="card">
     <img src="assets/Image/Image 01.png" alt="">
   </div>
 
