--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
   </header>
   <main class="grid container">
  <section id="featured" class="grid grid-flow-col gap-16">
-  <div class="card">
-    <img src="assets/Image/Image 01.png" alt="">
-  </div>
+   <figure class="card">
+   <div class="card">
+     <img src="assets/Image/Image 01.png" alt="">
+    <figcaption>
+      <span class="content-tag">Robótica</span>
+      <h2 class="text-2xl">
+        Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.
+      </h2>
+    </figcaption>
+    </figure>
+    </div>
 
   <div class="grid grid-cols-2 gap-16">
     <div>
