estilzando os ultimos cards

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </article>
         
  </section> 
- <div>
+ <aside>
   <div id="ads">
     <img src="assets/Image/Ads.png" alt="">
   </div>
@@ -277,7 +277,7 @@
           
      </div>
   </section>
- </div>
+</aside>
   </main>
 </body>
 </html>
